# flat-i-mihr

./: Cargo.toml  Procfile  README.md  Rocket.toml
migrations/2021-03-26-134004_create_user/: up.sql
src/: main.rs  schema.rs
src/models/: user.rs
src/routes/: user.rs
src/security/: crypt.rs
